corrected typo in license file name